--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,10 +56,6 @@ body {
   margin-right: 0.5rem;
 }
 
-.main-nav-item i {
-  margin-right: 0.5rem;
-}
-
 .main-nav-item:hover {
   text-decoration: underline;
 }
@@ -72,15 +68,6 @@ body {
 .main-nav-logo-image {
   max-width: 100%;
   width: 200px;
-}
-
-.main-nav-link {
-  padding-right: 1rem;
-  text-decoration: none;
-}
-
-.main-nav-link i {
-  padding-right: 0.5rem;
 }
 
 .hero {
@@ -135,38 +122,6 @@ body {
 .features {
   display: flex;
   flex-direction: column;
-}
-
-.editNameContent {
-  display: flex;
-  justify-content: center;
-}
-
-.headerUserContentSave {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.headerUserContentCancel {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.inputLastName {
-  margin-left: 0.5rem;
-  margin-bottom: 0.5rem;
-  height: 2.5rem;
-}
-
-.InputfirstName {
-  margin-bottom: 0.5rem;
-  height: 2.5rem;
-}
-
-.edit-button {
-  margin-left: 0.5rem;
 }
 
 @media (min-width: 920px) {
@@ -313,7 +268,7 @@ body {
   margin-top: 1rem;
   border-color: #00bc77;
   background-color: #00bc77;
-  color: #ffffff;
+  color: #fff;
 }
 
 @media (min-width: 720px) {
