--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -282,5 +282,146 @@ body {
     width: 200px;
   }
 }
+.loading-wrapper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0px 20px 0px;
+}
+
+.loading {
+  display: block;
+  position: relative;
+  width: 80px;
+  height: 13px;
+}
+
+.loading div {
+  position: absolute;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background-color: #2c3e50;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.loading.light div {
+  background-color: white;
+}
+
+.loading div:nth-child(1) {
+  left: 8px;
+  animation: loading1 0.6s infinite;
+}
+
+.loading div:nth-child(2) {
+  left: 8px;
+  animation: loading2 0.6s infinite;
+}
+
+.loading div:nth-child(3) {
+  left: 32px;
+  animation: loading2 0.6s infinite;
+}
+
+.loading div:nth-child(4) {
+  left: 56px;
+  animation: loading3 0.6s infinite;
+}
+
+@keyframes loading1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes loading3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes loading2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+.alert {
+  display: inline-block;
+  background-color: #f8d7da;
+  color: #7f2e36;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  padding: 15px 10px;
+}
+
+.main {
+  padding: 10px 0px;
+}
+
+.infos-edition-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.infos-edition-form .alert {
+  margin-top: 0px;
+}
+.infos-edition-form input {
+  font-size: 14px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+.infos-edition-form--actions {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+.infos-edition-form--actions button:nth-child(2) {
+  width: 100%;
+  padding: 8px;
+  font-weight: bold;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+}
+.infos-edition-form--actions button:first-child {
+  width: 100%;
+  padding: 8px;
+  font-weight: bold;
+  border-color: #00bc77;
+  background-color: #fff;
+  color: #00bc77;
+}
+
+.main-nav-item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.auth-controls {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.auth-controls button {
+  background-color: transparent;
+  border: none;
+  color: #2c3e50;
+  font-size: 1em;
+  font-family: inherit;
+  cursor: pointer;
+  font-weight: bold;
+}
 
 /*# sourceMappingURL=main.css.map */
