--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,16 +23,19 @@ body {
 
 .sr-only {
   border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  /* 1 */
   -webkit-clip-path: inset(50%) !important;
-  clip-path: inset(50%) !important; /* 2 */
+  clip-path: inset(50%) !important;
+  /* 2 */
   height: 1px !important;
   margin: -1px !important;
   overflow: hidden !important;
   padding: 0 !important;
   position: absolute !important;
   width: 1px !important;
-  white-space: nowrap !important; /* 3 */
+  white-space: nowrap !important;
+  /* 3 */
 }
 
 .main-nav {
@@ -53,7 +56,6 @@ body {
 
 .main-nav-item {
   text-decoration: none;
-  margin-right: 0.5rem;
 }
 
 .main-nav-item:hover {
@@ -364,7 +366,7 @@ body {
 }
 
 .main {
-  padding: 10px 0px;
+  padding: 10px 0px 50px;
 }
 
 .infos-edition-form {
